--- a/chemcloud/templates/chemical/reaction_detail.html
+++ b/chemcloud/templates/chemical/reaction_detail.html
@@ -63,7 +63,7 @@
     </tbody>
   </table> </div>
   
-   <div><h4>Права на Реакцию</h4>
+   <div><h4>Права на Реакцию</h4><a name="reaction_rights"></a>
       
       {% render_table user_reacts %}
     
