--- a/chemcloud/templates/chemical/scheme_detail.html
+++ b/chemcloud/templates/chemical/scheme_detail.html
@@ -4,12 +4,20 @@
 
 
 {% block body_block %}
+	
 	<div class="page-header">
-		<h1>Детали механизма</h1>
-	</div>
-		<div class="page-content">
-			{% if scheme %}
-				<table>
+
+    <h1> <a href="{% url 'scheme_all' id_reaction %}" class="pull-left"><span class="glyphicon glyphicon-menu-left"></span></a>Детали механизма {% if is_owner %} (Owner grants) {% else %}(Read only){% endif %} </h1>          
+            
+    </div>
+	
+<div class="page-content">    
+<div class="row">          
+ <div class="col-xs-7">
+    
+            
+  <table class="table col-xs-6">
+     <tbody>
 					<tr>
 						<td>Название:</td>
 						<td>{{ scheme.name }}</td>
@@ -38,10 +46,22 @@
 						<td>Механизм создал(а):</td>
 						<td>{{scheme.created_by}}</td>
 					</tr>
-				</table>
-			{% else %}
-				<strong> Не удалось получить детали схемы </strong>
-			{% endif %}
+				
+
+          </tbody>
+  </table>
+    </div>
+        
+        <div class=" col-xs-3">
+    
+    {% include "chemical/scheme_detail_menu.html" %} 
+    
+     
+    
+    
+     
+      </div> 
+         
 
             </div>
 {% endblock %}
