Исправила опечатку Действительно

--- a/chemcloud/templates/chemical/react_substance_detail_menu.html
+++ b/chemcloud/templates/chemical/react_substance_detail_menu.html
@@ -25,7 +25,7 @@
             <div class="modal-body">  
              
                         <div class="well well-lg">
-                          Вы действиельно хотите удалить вещество из реакции?  
+                          Вы действительно хотите удалить вещество из реакции?  
                         </div>                 
                   
                 <div>
