--- a/chemcloud/templates/chemical/reaction_detail_menu.html
+++ b/chemcloud/templates/chemical/reaction_detail_menu.html
@@ -27,7 +27,7 @@
             <div class="modal-body">  
              
                         <div class="well well-lg">
-                          Вы действиельно хотите удалить реакцию?  
+                          Вы действительно хотите удалить реакцию?  
                         </div>                 
                   
                 <div>
