--- a/chemcloud/templates/chemical/scheme_detail_menu.html
+++ b/chemcloud/templates/chemical/scheme_detail_menu.html
@@ -29,7 +29,7 @@
             <div class="modal-body">  
              
                         <div class="well well-lg">
-                          Вы действиельно хотите удалить механизм ?  
+                          Вы действительно хотите удалить механизм ?  
                         </div>                 
                   
                 <div>
