--- a/chemcloud/templates/chemical/substance_all.html
+++ b/chemcloud/templates/chemical/substance_all.html
@@ -13,7 +13,7 @@
                 <div class="panel panel-default">
   <!-- Default panel contents -->
   <div class="panel-body"> 
-          <a class = "btn btn-new pull-left" href = "{% url 'substance_new' %}" role = "button">Добавить вещество</a>       
+          <a class = "btn btn-new" href = "{% url 'substance_new' %}" role = "button">Добавить вещество</a>       
           <a href="{% url 'atom_all' %}" class="pull-right">Таблица Менделеева</a>
           
                    
