Поправила верстку в Механизмах

--- a/chemcloud/templates/chemical/scheme_edit_step_detail.html
+++ b/chemcloud/templates/chemical/scheme_edit_step_detail.html
@@ -1,12 +1,13 @@
 <div >
 <h4> Вещества реакции:</h4>
+</div>
 <div>
 <ul class="list-group">
 {% for subst in reac_substs %}
 <li class="list-group-item">{{ subst.alias }}</li>
 {% endfor %}
 </ul>
-
+</div>
 
 <!--<ul class="nav nav-pills">
   <li class="active"><a href="#">Детали стадии</a></li>
