--- a/chemcloud/templates/chemical/scheme_edit.html
+++ b/chemcloud/templates/chemical/scheme_edit.html
@@ -23,7 +23,6 @@
     <div class="btn-toolbar" role="toolbar">
       <div class="btn-group">
         <button type="button" id="add_step" class="btn btn-default" data-reacid="{{id_reaction}}" data-schemeid="{{id_scheme}}" data-toggle="tooltip" data-placement="top" title="Добавить стадию"><span class="glyphicon glyphicon-plus"></span></button>
-        <button type="button" class="btn btn-default"  data-reacid="{{id_reaction}}" data-schemeid="{{id_scheme}}" data-toggle="tooltip" data-placement="top" title="Удалить стадию"><span class="glyphicon glyphicon-minus"></span></button>
         <button type="button" class="btn btn-default"  data-reacid="{{id_reaction}}" data-schemeid="{{id_scheme}}"  data-toggle="tooltip" data-placement="top" title="Редактировать стадию"><span class="glyphicon glyphicon-pencil"></span></button>
         <button type="button" class="btn btn-default"  data-reacid="{{id_reaction}}" data-schemeid="{{id_scheme}}" data-toggle="tooltip" data-placement="top" title="Проверить баланс стадии"><span class="glyphicon glyphicon-check"></span></button>
       </div>
@@ -37,7 +36,7 @@
 							<th class="order orderable"><a href="?sort=order">№ п/п</a></th>
 							<th class="name orderable"><a href="?sort=name">Обозначение</a></th>
 							<th class="step">Стадия</th>
-							<th class="detail_link"></th>
+							<th class="remove"></th>
 						</tr>
 					</thead>
 	    			<tbody id="steps_body">
@@ -48,7 +47,7 @@
 							<td id="order_{{step.id_step}}"> {{ step.order }} </td>
 							<td>{{ step.name }}</td>
 							<td>{{ step.get_leftPart_of_step }} {% if step.is_revers %} &#8596 {% else %} &#8594 {% endif %} {{ step.get_rightPart_of_step }}</td>
-							<td><a href="{% url 'step_detail' id_reaction id_scheme step.id_step %}"> Детали</a> </td>
+							<td><button id="btn_{{step.id_step}}del" class="step_delete" type="button" class="btn btn-default"  data-reacid="{{id_reaction}}" data-schemeid="{{id_scheme}}" data-stepid="{{step.id_step}}" data-toggle="tooltip" data-placement="top" title="Удалить стадию"><span class="glyphicon glyphicon-remove"></span></button> </td>
 						</tr>
 						{% endfor %}
 					</tbody>
