--- a/chemcloud/templates/chemical/base_cabinet.html
+++ b/chemcloud/templates/chemical/base_cabinet.html
@@ -32,7 +32,7 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
+    {% block header_block %}  {% endblock %}
 </head>
 
 <body>
@@ -58,6 +58,7 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="{% static "js/bootstrap.min.js" %}"></script>
 
+{% block footer_block %}  {% endblock %}
 </body>
 
 </html>
