--- a/chemcloud/templates/chemical/base_reaction.html
+++ b/chemcloud/templates/chemical/base_reaction.html
@@ -33,7 +33,7 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
+    {% block header_block %}  {% endblock %}
 </head>
 
 <body>
@@ -80,6 +80,7 @@
     <!-- Custom Ajax code -->
     <script src="{% static "js/chemical-ajax.js" %}"></script>
 
+   {% block footer_block %}  {% endblock %}
 </body>
 
 
