--- a/chemcloud/templates/chemical/scheme_edit.html
+++ b/chemcloud/templates/chemical/scheme_edit.html
@@ -29,7 +29,7 @@
 </div>	
 
 			<div class="table-container">
-				<table id="all-steps"  class="paleblue">
+				<table id="all-steps_{{id_reaction}}_{{id_scheme}}"  class="paleblue">
 					<thead>
 						<tr>
 							<th class="order_arrows">Переместить</th>
@@ -45,8 +45,8 @@
 							<td><button id="btn_{{step.id_step}}up" class="changeorder" data-stepid="{{step.id_step}}" data-direction="up"  type="button" data-reacid="{{id_reaction}}" data-schemeid="{{id_scheme}}">&#9650</button></br>
 <button id="btn_{{step.id_step}}down" class="changeorder" data-stepid="{{step.id_step}}" data-direction="down"  type="button"  data-reacid="{{id_reaction}}" data-schemeid="{{id_scheme}}">&#9660</button></td>
 							<td id="order_{{step.id_step}}"> {{ step.order }} </td>
-							<td>{{ step.name }}</td>
-							<td>{{ step.get_leftPart_of_step }} {% if step.is_revers %} &#8596 {% else %} &#8594 {% endif %} {{ step.get_rightPart_of_step }}</td>
+							<td class="edit name {{step.id_step}}">{{ step.name }}</td>
+							<td class="edit step {{step.id_step}}">{{ step.get_leftPart_of_step }} {% if step.is_revers %} &#8596 {% else %} &#8594 {% endif %} {{ step.get_rightPart_of_step }}</td>
 							<td><button id="btn_{{step.id_step}}del" class="step_delete" type="button" class="btn btn-default"  data-reacid="{{id_reaction}}" data-schemeid="{{id_scheme}}" data-stepid="{{step.id_step}}" data-toggle="tooltip" data-placement="top" title="Удалить стадию"><span class="glyphicon glyphicon-remove"></span></button> </td>
 						</tr>
 						{% endfor %}
