Сохранить и добавить новое - для Веществ и Веществ Реакции

--- a/chemcloud/templates/chemical/form_body_new.html
+++ b/chemcloud/templates/chemical/form_body_new.html
@@ -8,5 +8,5 @@
   <br>
 {% endfor %}                        
 			
-<button type="submit" class="save btn btn-primary">Сохранить</button>
+<button type="submit" class="save btn btn-primary" name="save_btn">Сохранить</button>
 			
