--- a/chemcloud/templates/chemical/substance_new.html
+++ b/chemcloud/templates/chemical/substance_new.html
@@ -15,7 +15,7 @@
  <form method="POST" class="form" action="{% url 'substance_new' %}">  
             
             {% include "chemical/form_body_new.html" %} 
-            
+            <button type="submit" class="save btn btn-success" name="save_and_new_btn">Сохранить и добавить новое</button>
             
 </form >
 
