Подсказка при поиске Вещества

--- a/chemcloud/templates/chemical/react_substance_all.html
+++ b/chemcloud/templates/chemical/react_substance_all.html
@@ -31,8 +31,11 @@
 
 </div>          
 
+           <div>
+             {% render_table substance %}
+                      </div>
+           
             </div>
             
-             {% render_table substance %}
                        <!-- Table -->
 {% endblock %}
