--- a/chemcloud/templates/chemical/substance_all.html
+++ b/chemcloud/templates/chemical/substance_all.html
@@ -15,21 +15,13 @@
     <div class="page-header">
                 <h1>Справочник веществ</h1>
                 
-                <p><b>Start typing a name in the input field below:</b></p>
-<form>
-First name: <input type="text" onkeyup="showHint(this.value)">
-</form>
-<p>Suggestions: <span id="txtHint"></span></p>
-            </div>
-            <div class="page-content">
-           
-                <div class="panel panel-default">
+
   <!-- Default panel contents -->
  
          
                    
                      
-    <div class="well well-md">
+     <div class="well well-md"> 
 	<div class="row" >
         <div class="col-md-2">
          <a class = "btn btn-new" href = "{% url 'substance_new' %}" role = "button">Добавить вещество</a>       
@@ -38,15 +30,16 @@ First name: <input type="text" onkeyup="showHint(this.value)">
     		<div class="col-md-6">
             <div id="custom-search-input">
                 <div class="input-group col-md-12">
-                    <input type="text" class="form-control input-md" placeholder="Введите строку для поиска" />
+                    <input type="text" id="search" class="form-control input-md" placeholder="Введите строку для поиска" />
                     <span class="input-group-btn">
                         <button class="btn btn-info btn-md" type="button">
                             <i class="glyphicon glyphicon-search"></i>
                         </button>
                     </span>
+                    
                 </div>
             </div>
-            
+            <p>Подсказка: <span id="txtHint"></span></p>
         </div>
         
         <div class="col-md-4">
@@ -55,7 +48,7 @@ First name: <input type="text" onkeyup="showHint(this.value)">
         </div>
         
 	</div>
-</div>
+ </div>
 
   
 
@@ -64,9 +57,10 @@ First name: <input type="text" onkeyup="showHint(this.value)">
  
 
             </div>
-            
-                      {% render_table substance %}
-                       <!-- Table -->
+            <div> {% render_table substance %}</div>
+                      
+                      </div>
+                      
                        
 {% endblock %}
 
