--- a/chemcloud/templates/chemical/scheme_edit.html
+++ b/chemcloud/templates/chemical/scheme_edit.html
@@ -74,3 +74,7 @@
 </div>
 </div> 
 {% endblock %}
+
+{% block footer_block %}
+<script src="{% static "js/scheme-ajax.js" %}"></script>
+{% endblock %}
