--- a/chemcloud/templates/chemical/substance_all.html
+++ b/chemcloud/templates/chemical/substance_all.html
@@ -30,16 +30,19 @@
     		<div class="col-md-6">
             <div id="custom-search-input">
                 <div class="input-group col-md-12">
-                    <input type="text" id="search" class="form-control input-md" placeholder="Введите строку для поиска" />
+                    <input type="text" id="search" class="form-control input-md" placeholder="Введите строку для поиска" 
+                    
+                   value= {% if searched %} "{{searched}}"{% else %} ""{% endif %}
+                    />
                     <span class="input-group-btn">
-                        <button class="btn btn-info btn-md" type="button">
+                        <button class="btn btn-info btn-md" type="button" id="search_btn">
                             <i class="glyphicon glyphicon-search"></i>
                         </button>
                     </span>
                     
                 </div>
             </div>
-            <p>Подсказка: <span id="txtHint"></span></p>
+            <div><span id="txtHint"></span></div>
         </div>
         
         <div class="col-md-4">
