--- a/chemcloud/templates/chemical/substance_detail.html
+++ b/chemcloud/templates/chemical/substance_detail.html
@@ -3,6 +3,7 @@
 {% load staticfiles %}
 {% load render_table from django_tables2 %}
 
+{% csrf_token %}
 
 {% block body_block %}
    
@@ -23,7 +24,7 @@
         <td class="detail_value"><input class="box_input" size="30" type="text" disabled="disabled" value="{{  substance.name }}"/></td>
         {% if is_owner %}
         <td class="detail_edit" > </td>         
-         <td class="detail_btns">
+         <td class="detail_btns" field_name="name">
         <button type="button" class="detail_btn_edit"></button>
         <button type="button" class="detail_btn_save" ></button>
         </td>
@@ -40,7 +41,7 @@
         <td class="detail_value"><input class="box_input" size="30" type="text" disabled="disabled" value="{{  substance.formula_brutto }}"/></td>
         {% if is_owner %}
         <td class="detail_edit"  ></td>         
-         <td class="detail_btns">
+         <td class="detail_btns" >
         <button type="button" class="detail_btn_edit"></button>
         <button type="button" class="detail_btn_save" refresh_page="True"></button>
         </td>
@@ -63,7 +64,7 @@
         <td class="detail_value"><input class="box_input" size="30" type="text" disabled="disabled" value="{{  substance.charge }}"/></td>
         {% if is_owner %}
         <td class="detail_edit" ></td>         
-         <td class="detail_btns">
+         <td class="detail_btns" field_name="charge">
         <button type="button" class="detail_btn_edit"></button>
         <button type="button" class="detail_btn_save"></button>
         </td>
@@ -73,10 +74,11 @@
      
       <tr>
         <td class="detail_caption">Радикал:</td>
-        <td class="detail_value"><input  size="30" type="checkbox" disabled="disabled" value="{{  substance.is_radical }}"/></td>
+        <td class="detail_value"><input  type="checkbox" disabled="disabled" value="{{  substance.is_radical }}"
+         {% if substance.is_radical %} checked="checked" {% endif %}/></td>
         {% if is_owner %}
         <td class="detail_edit"  ></td>         
-         <td class="detail_btns">
+         <td class="detail_btns" field_name="is_radical">
         <button type="button" class="detail_btn_edit"></button>
         <button type="button" class="detail_btn_save"></button>
         </td>
@@ -89,7 +91,7 @@
         <td class="detail_value"><textarea class="form-control col-xs-12"  rows="10" disabled="disabled">{{  substance.note }}</textarea></td>
         {% if is_owner %}
         <td class="detail_edit"  ></td>         
-         <td class="detail_btns">
+         <td class="detail_btns" field_name="note">
         <button type="button" class="detail_btn_edit"></button>
         <button type="button" class="detail_btn_save"></button>
         </td>
