Поправила верстку - footer  прижимался вверх

--- a/chemcloud/templates/chemical/base_cabinet.html
+++ b/chemcloud/templates/chemical/base_cabinet.html
@@ -20,7 +20,7 @@
     <link href="{% static "django_tables2/themes/paleblue/css/screen.css" %}"  rel="stylesheet" />
 
     <!-- Custom Fonts -->
-
+    <link href="{% static "css/landing-page.css" %}" rel="stylesheet">
 
     <!-- other CSS -->
     <link href="{% static "custom/other.css" %}" rel="stylesheet" type="text/css">
