--- a/chemcloud/templates/chemical/base_reaction.html
+++ b/chemcloud/templates/chemical/base_reaction.html
@@ -15,7 +15,7 @@
     <!-- Bootstrap Core CSS -->
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
     <!-- Custom CSS -->
-   
+    <link href="{% static "css/landing-page.css" %}" rel="stylesheet">
     <!-- django-tables2 CSS -->
     <link href="{% static "django_tables2/themes/paleblue/css/screen.css" %}"  rel="stylesheet" />
 
@@ -42,7 +42,7 @@
 
 </header>
  
- 
+ <div class="container">
   <div class="row">
          
     
@@ -65,7 +65,7 @@
    
     </div>
    
-   
+  </div> 
     {% include "footer.html" %}
     <!-- jQuery -->
     <script src="{% static "js/jquery.js" %}"></script>
