Детали Вещества Реакции

--- a/chemcloud/templates/chemical/reaction_detail.html
+++ b/chemcloud/templates/chemical/reaction_detail.html
@@ -68,12 +68,12 @@
       </tr>
       
       <tr>
-        <td class="detail_caption">Дата создания</td>
+        <td class="detail_caption">Дата создания:</td>
         <td class="detail_value">{{  reaction.created_date }}</td>
       </tr>
       
       <tr>
-        <td class="detail_caption">Создал(ла)</td>
+        <td class="detail_caption">Создал(ла):</td>
         <td class="detail_value">{{  reaction.created_by }}</td>
       </tr>
       
