--- a/chemcloud/templates/chemical/react_substance_detail.html
+++ b/chemcloud/templates/chemical/react_substance_detail.html
@@ -13,40 +13,61 @@
 <div class="page-content">    
            
 <div class="row">          
- <div class="col-xs-7">
+ <div class="col-xs-8">
     
             
-  <table class="table col-xs-6">
-     <tbody>
+  <table class="table">
+     <tbody id="detail_main" model_name="Reaction_subst" url_edit="{% url 'react_substance_detail_edit' id_reaction substance.pk %}" >
      <tr>
-        <td class="text-right col-xs-4">Название</td>
-        <td class="text-left">{{  substance.substance.name }}</td>
+        <td class="detail_caption">Название:</td>
+        <td class="detail_value">{{  substance.substance.name }}</td>
       </tr>
       <tr>
-        <td class="pull-right">Брутто-формула</td>
-        <td class="text-left">{{  substance.substance.formula_brutto_formatted | safe}}</td>
-      </tr>
-      
-      <tr>
-      <td class="pull-right">Псеводним</td>
-      <td class="text-left">{{  substance.alias }}</td>
+        <td class="detail_caption">Брутто-формула:</td>
+        <td class="detail_value">{{  substance.substance.formula_brutto_formatted | safe}}</td>
       </tr>
       
       <tr>
-        <td class="pull-right">Краткая брутто-формула</td>
-        <td class="text-left">{{  substance.brutto_formula_short }}</td>
+      <td class="detail_caption">Псеводним:</td>
+      <td class="detail_value"><input class="box_input" size="30" type="text" disabled="disabled" value="{{  substance.alias }}"/></td>
+        {% if is_owner %}
+        <td class="detail_edit" > </td>         
+         <td class="detail_btns" field_name="alias">
+        <button type="button" class="detail_btn_edit"></button>
+        <button type="button" class="detail_btn_save" ></button>
+        </td>
+        {% endif %}
       </tr>
       
       <tr>
-        <td class="pull-right">Примечание</td>
-        <td class="text-left">{{  substance.note }}</td>
+        <td class="detail_caption">Краткая брутто-формула:</td>
+        <td class="detail_value"><input class="box_input" size="30" type="text" disabled="disabled" value="{{  substance.brutto_formula_short }}"/></td>
+        {% if is_owner %}
+        <td class="detail_edit" > </td>         
+         <td class="detail_btns" field_name="brutto_formula_short">
+        <button type="button" class="detail_btn_edit"></button>
+        <button type="button" class="detail_btn_save" ></button>
+        </td>
+        {% endif %}
+      </tr>
+      
+      <tr>
+        <td class="detail_caption">Примечание:</td>
+        <td class="detail_value"><textarea class="form-control col-xs-12"  rows="10" disabled="disabled">{{  substance.note }}</textarea></td>
+        {% if is_owner %}
+        <td class="detail_edit"  ></td>         
+         <td class="detail_btns" field_name="note">
+        <button type="button" class="detail_btn_edit"></button>
+        <button type="button" class="detail_btn_save"></button>
+        </td>
+        {% endif %}
       </tr>
       
       </tbody>
   </table>
     </div>
         
-        <div class=" col-xs-3">
+        <div class=" col-xs-4">
     
     {% include "chemical/react_substance_detail_menu.html" %} 
     
@@ -60,4 +81,9 @@
             </div>
 </div>
            
+{% endblock %}
+
+
+{% block footer_block %}
+<script src="{% static "js/details.js" %}"></script>
 {% endblock %}
