--- a/chemcloud/templates/chemical/scheme_detail.html
+++ b/chemcloud/templates/chemical/scheme_detail.html
@@ -13,38 +13,57 @@
 	
 <div class="page-content">    
 <div class="row">          
- <div class="col-xs-7">
+ <div class="col-xs-8">
     
             
-  <table class="table col-xs-6">
-     <tbody>
+  <table class="table">
+     <tbody id="detail_main" model_name="Reaction_scheme" url_edit="{% url 'scheme_detail_edit' id_reaction scheme.pk %}">
 					<tr>
-						<td>Название:</td>
-						<td>{{ scheme.name }}</td>
+						<td class="detail_caption">Название:</td>
+						
+						<td class="detail_value"><input class="box_input" size="30" type="text" disabled="disabled" value="{{  scheme.name }}"/></td>
+        {% if is_owner %}
+        <td class="detail_edit" > </td>         
+         <td class="detail_btns" field_name="name">
+        <button type="button" class="detail_btn_edit"></button>
+        <button type="button" class="detail_btn_save" ></button>
+        </td>
+        {% endif %}
 					</tr>
 					<tr>
-						<td>Описание:</td>
-						<td>{{ scheme.description }}</td>
+						<td class="detail_caption">Описание:</td>						
+						<td class="detail_value"><textarea class="form-control col-xs-12"  rows="10" disabled="disabled">{{  scheme.description}}</textarea></td>
+        {% if is_owner %}
+        <td class="detail_edit"  ></td>         
+         <td class="detail_btns" field_name="description">
+        <button type="button" class="detail_btn_edit"></button>
+        <button type="button" class="detail_btn_save"></button>
+        </td>
+        {% endif %}
 					</tr>
 					<tr>
-						<td>Вероятный:</td>
-						<td><input type="checkbox" {% if scheme.is_possible %}checked {% endif %} ></td>
+						<td class="detail_caption">Вероятный:</td>						
+						
+				<td class="detail_value"><input  type="checkbox" disabled="disabled" value="{{  scheme.is_possible }}"
+         {% if scheme.is_possible %} checked="checked" {% endif %}/></td>
+        {% if is_owner %}
+        <td class="detail_edit"  ></td>         
+         <td class="detail_btns" field_name="is_possible">
+        <button type="button" class="detail_btn_edit"></button>
+        <button type="button" class="detail_btn_save"></button>
+        </td>
+        {% endif %}		
+						
+						
+					</tr>
+					
+					<tr>
+						<td class="detail_caption">Дата создания:</td>
+						<td class="detail_value">{{scheme.created_date}}</td>
 					</tr>
 					<tr>
-						<td>Дата последних изменений:</td>
-						<td>{{scheme.updated_date}}</td>
-					</tr>
-					<tr>
-						<td>Изменения внес(ла):</td>
-						<td>{{scheme.updated_by}}</td>
-					</tr>
-					<tr>
-						<td>Дата создания:</td>
-						<td>{{scheme.created_date}}</td>
-					</tr>
-					<tr>
-						<td>Механизм создал(а):</td>
-						<td>{{scheme.created_by}}</td>
+						<td class="detail_caption">Механизм создал(а):</td>
+						<td class="detail_value">{{scheme.created_by}}</td>
 					</tr>
 				
 
@@ -52,7 +71,7 @@
   </table>
     </div>
         
-        <div class=" col-xs-3">
+        <div class=" col-xs-4">
     
     {% include "chemical/scheme_detail_menu.html" %} 
     
@@ -65,4 +84,8 @@
 
             </div>
 </div>
+{% endblock %}
+
+{% block footer_block %}
+<script src="{% static "js/details.js" %}"></script>
 {% endblock %}
