--- a/chemcloud/templates/chemical/scheme_edit.html
+++ b/chemcloud/templates/chemical/scheme_edit.html
@@ -46,7 +46,8 @@
 <button id="btn_{{step.id_step}}down" class="changeorder" data-stepid="{{step.id_step}}" data-direction="down"  type="button"  data-reacid="{{id_reaction}}" data-schemeid="{{id_scheme}}">&#9660</button></td>
 							<td id="order_{{step.id_step}}"> {{ step.order }} </td>
 							<td class="edit name {{step.id_step}}">{{ step.name }}  <button type="button" class="editbtn"  ><span class="glyphicon glyphicon-pencil"></span></button></td>
-							<td class="edit step {{step.id_step}}">{{ step.get_leftPart_of_step }} {% if step.is_revers %} &#8596 {% else %} &#8594 {% endif %} {{ step.get_rightPart_of_step }} <button type="button" class="editbtn"  ><span class="glyphicon glyphicon-pencil"></span></button></td>
+<!--							<td class="edit step {{step.id_step}}">{{ step.get_leftPart_of_step }} {% if step.is_revers %} &#8596 {% else %} &#8594 {% endif %} {{ step.get_rightPart_of_step }} <button type="button" class="editbtn"  ><span class="glyphicon glyphicon-pencil"></span></button></td>-->
+<td class="edit step {{step.id_step}}">{{ step.get_leftPart_of_step }} {% if step.is_revers %} <-> {% else %} -> {% endif %} {{ step.get_rightPart_of_step }} <button type="button" class="editbtn"  ><span class="glyphicon glyphicon-pencil"></span></button></td>
 							<td><button id="btn_{{step.id_step}}del" class="step_delete" type="button" data-reacid="{{id_reaction}}" data-schemeid="{{id_scheme}}" data-stepid="{{step.id_step}}" data-toggle="tooltip" data-placement="top" title="Удалить стадию"><span class="glyphicon glyphicon-remove"></span></button> </td>
 							<td><a href="{% url 'step_detail' id_reaction id_scheme step.id_step %}"> Детали</a> </td>
 			
