Начата функция проверки баланса стадии. Обработка случая, когда стех.коэффициент введен отрицательным

--- a/chemcloud/templates/chemical/scheme_edit.html
+++ b/chemcloud/templates/chemical/scheme_edit.html
@@ -21,7 +21,7 @@
     <div class="btn-toolbar" role="toolbar">
       <div class="btn-group">
         <button type="button" id="add_step" class="btn btn-default" data-reacid="{{id_reaction}}" data-schemeid="{{id_scheme}}" data-toggle="tooltip" data-placement="top" title="Добавить стадию"><span class="glyphicon glyphicon-plus"></span></button>
-        <button type="button" class="btn btn-default"  data-reacid="{{id_reaction}}" data-schemeid="{{id_scheme}}" data-toggle="tooltip" data-placement="top" title="Проверить баланс стадии"><span class="glyphicon glyphicon-check"></span></button>
+        <button type="button" id="check_balance" class="btn btn-default"  data-reacid="{{id_reaction}}" data-schemeid="{{id_scheme}}" data-toggle="tooltip" data-placement="top" title="Проверить баланс стадии"><span class="glyphicon glyphicon-check"></span></button>
       </div>
 </div>	
 
