Немного поправила верстку в Деталях, чтоб не скрывались элементы для редактирования

--- a/chemcloud/templates/chemical/scheme_detail.html
+++ b/chemcloud/templates/chemical/scheme_detail.html
@@ -21,7 +21,7 @@
 					<tr>
 						<td class="detail_caption">Название:</td>
 						
-						<td class="detail_value"><input class="box_input" size="30" type="text" disabled="disabled" value="{{  scheme.name }}"/></td>
+						<td class="detail_value"><input class="box_input"  type="text" disabled="disabled" value="{{  scheme.name }}"/></td>
         {% if is_owner %}
         <td class="detail_edit" > </td>         
          <td class="detail_btns" field_name="name">
