--- a/chemcloud/templates/chemical/react_substance_detail.html
+++ b/chemcloud/templates/chemical/react_substance_detail.html
@@ -29,7 +29,7 @@
       
       <tr>
       <td class="detail_caption">Псеводним:</td>
-      <td class="detail_value"><input class="box_input" size="30" type="text" disabled="disabled" value="{{  substance.alias }}"/></td>
+      <td class="detail_value"><input class="box_input"  type="text" disabled="disabled" value="{{  substance.alias }}"/></td>
         {% if is_owner %}
         <td class="detail_edit" > </td>         
          <td class="detail_btns" field_name="alias">
@@ -41,7 +41,7 @@
       
       <tr>
         <td class="detail_caption">Краткая брутто-формула:</td>
-        <td class="detail_value"><input class="box_input" size="30" type="text" disabled="disabled" value="{{  substance.brutto_formula_short }}"/></td>
+        <td class="detail_value"><input class="box_input"  type="text" disabled="disabled" value="{{  substance.brutto_formula_short }}"/></td>
         {% if is_owner %}
         <td class="detail_edit" > </td>         
          <td class="detail_btns" field_name="brutto_formula_short">
@@ -53,7 +53,7 @@
       
       <tr>
         <td class="detail_caption">Примечание:</td>
-        <td class="detail_value"><textarea class="form-control col-xs-12"  rows="10" disabled="disabled">{{  substance.note }}</textarea></td>
+        <td class="detail_value"><textarea class="form-control"  rows="10" disabled="disabled">{{  substance.note }}</textarea></td>
         {% if is_owner %}
         <td class="detail_edit"  ></td>         
          <td class="detail_btns" field_name="note">
@@ -67,7 +67,7 @@
   </table>
     </div>
         
-        <div class=" col-xs-4">
+        <div class="col-xs-4">
     
     {% include "chemical/react_substance_detail_menu.html" %} 
     
