--- a/chemcloud/templates/chemical/reaction_detail.html
+++ b/chemcloud/templates/chemical/reaction_detail.html
@@ -25,7 +25,7 @@
       
       <tr>
         <td class="detail_caption">Название:</td>
-        <td class="detail_value"><input class="box_input" size="30" type="text" disabled="disabled" value="{{  reaction.name }}"/></td>
+        <td class="detail_value"><input class="box_input"  type="text" disabled="disabled" value="{{  reaction.name }}"/></td>
         {% if is_owner %}
         <td class="detail_edit" > </td>         
          <td class="detail_btns" field_name="name">
