--- a/chemcloud/templates/chemical/step_detail.html
+++ b/chemcloud/templates/chemical/step_detail.html
@@ -7,7 +7,7 @@
 	<div class="page-header">
 		   <div class="page-header">
 
-    <h1> </span></a>Детали шага {% if is_owner %} (Owner grants) {% else %}(Read only){% endif %} </h1>
+    <h1> Детали шага {% if is_owner %} (Owner grants) {% else %}(Read only){% endif %} </h1>
            
             
     </div>
