--- a/chemcloud/templates/chemical/substance_detail.html
+++ b/chemcloud/templates/chemical/substance_detail.html
@@ -21,7 +21,7 @@
     <tbody id="detail_main" model_name="Substance" url_edit="{% url 'substance_detail_edit' substance.pk %}" >
      <tr>
         <td class="detail_caption">Название:</td>
-        <td class="detail_value"><input class="box_input" size="30" type="text" disabled="disabled" value="{{  substance.name }}"/></td>
+        <td class="detail_value"><input class="box_input" class="form-control"  type="text" disabled="disabled" value="{{  substance.name }}"/></td>
         {% if is_owner %}
         <td class="detail_edit" > </td>         
          <td class="detail_btns" field_name="name">
@@ -38,7 +38,7 @@
       
       <tr>
         <td class="detail_caption">Брутто-формула:</td>
-        <td class="detail_value"><input class="box_input" size="30" type="text" disabled="disabled" value="{{  substance.formula_brutto }}"/></td>
+        <td class="detail_value"><input class="box_input"  type="text" disabled="disabled" value="{{  substance.formula_brutto }}"/></td>
         {% if is_owner %}
         <td class="detail_edit"  ></td>         
          <td class="detail_btns" field_name="formula_brutto">
