--- a/chemcloud/templates/chemical/scheme_edit.html
+++ b/chemcloud/templates/chemical/scheme_edit.html
@@ -16,7 +16,7 @@
 <div class="row">
 
 	
-<div class="col-xs-6">
+<div class="col-xs-12">
 <div class="panel panel-default">
     <div class="btn-toolbar" role="toolbar">
       <div class="btn-group">
@@ -41,7 +41,7 @@
 {% if steps %}	
 						{% for step in steps %}
 						<tr class="even">
-							<td><button id="btn_{{step.id_step}}up" class="changeorder" data-stepid="{{step.id_step}}" data-direction="up"  type="button" data-reacid="{{id_reaction}}" data-schemeid="{{id_scheme}}">&#9650</button></br>
+							<td><button id="btn_{{step.id_step}}up" class="changeorder" data-stepid="{{step.id_step}}" data-direction="up"  type="button" data-reacid="{{id_reaction}}" data-schemeid="{{id_scheme}}">&#9650</button><br>
 <button id="btn_{{step.id_step}}down" class="changeorder" data-stepid="{{step.id_step}}" data-direction="down"  type="button"  data-reacid="{{id_reaction}}" data-schemeid="{{id_scheme}}">&#9660</button></td>
 							<td id="order_{{step.id_step}}"> {{ step.order }} </td>
 							<td class="edit name {{step.id_step}}">{{ step.name }}  <button type="button" class="editbtn"  ><span class="glyphicon glyphicon-pencil"></span></button></td>
@@ -61,8 +61,9 @@
 
 
    </div>
-
-        <div class=" col-xs-6">
+</div>
+       <div class="row">
+        <div class="col-xs-12">
 
     {% include "chemical/scheme_edit_step_detail.html" %}
 
@@ -70,8 +71,10 @@
 
       </div>
 
-
 </div>
+
+
+
 </div>
 {% endblock %}
 
